Stretch Goal: Make nav bar fixed

--- a/css/index.css
+++ b/css/index.css
@@ -161,6 +161,8 @@ p {
   margin: 0 auto;
 }
 .main-nav {
+  position: sticky;
+  top: 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
